adicionado elemento html para receber imagem do pokemon de costas, alteracao no posicionamento do css para colocar as duas imagens no grid e selecionado o elemento dentro da classe para adicionar a imagem com o fetch da api.

--- a/css/pokemon-api.css
+++ b/css/pokemon-api.css
@@ -17,10 +17,13 @@
   padding: 20px;
   font: 400 30px/1 "VT323", monospace;
 }
-.poke-img {
-  grid-column: 1/-1;
-  padding-block: 40px;
-  justify-self: center;
+.poke-img-front {
+  grid-column: 1;
+  justify-self: stretch;
+}
+.poke-img-back {
+  grid-column: 2;
+  justify-self: stretch;
 }
 .poke-type1,
 .poke-type2 {
