--- a/css/pokemon-api.css
+++ b/css/pokemon-api.css
@@ -6,7 +6,7 @@
 }
 .poke-card {
   display: grid;
-  grid-template-columns: repeat(2, minmax(100px, 200px));
+  grid-template-columns: repeat(2, 1fr);
 
   gap: 15px;
   background: #fff;
@@ -148,4 +148,43 @@
 }
 .dark {
   color: #333;
+}
+
+@media (max-width: 700px) {
+  .poke-card {
+    display: grid;
+
+    margin-inline: auto;
+    grid-template-columns: 1fr;
+    box-shadow: 0 0 0 10px #fff;
+    border: 5px solid #de5239;
+    width: 50vw;
+    padding: 20px;
+  }
+
+  .poke-img-back {
+    display: none;
+  }
+  .stats {
+    grid-column: 1;
+    grid-row: initial;
+
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    justify-content: center;
+  }
+  .poke-defense::after,
+  .poke-hp::after,
+  .poke-attack::after {
+    left: 0px;
+    top: -30px;
+  }
+  .poke-type2 {
+    margin-bottom: 30px;
+  }
+  .btn-container {
+    gap: 100px;
+    justify-content: center;
+  }
 }
