--- a/css/poke-search.css
+++ b/css/poke-search.css
@@ -1,6 +1,8 @@
 .poke-search-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
   margin-top: 20px;
 }
 .poke-search {
@@ -9,13 +11,21 @@
   font: 400 30px/1 "VT323", monospace;
   border: 4px solid #de5239;
   color: #333;
+  transition: 0.3s all;
 }
-
 .poke-search:focus {
   outline: none;
   box-shadow: 0 0 5px 0px #8b2900;
 }
-
+.search-error {
+  display: none;
+  font: 400 20px/1 "VT323", monospace;
+  color: #8b2900;
+  transition: 0.3s all;
+}
+.search-error.active {
+  display: block;
+}
 @media (max-width: 500px) {
   .poke-search {
     width: 250px;
