adicionado html e css do poke-storage. Botao selecionado, e evento ao click criado para inserir o uma nova li com a imagem do pokemon que esta na tela. inserido um dataset para armazenar o id do pokemon que esta sendo guardado para adicionar a li. Evento de clique criado para os pokemons que estao armazenados, acessando o id armazenado no dataset para chamar o pokemon na tela atraves do metodo getData.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import "./poke-search.css";
 @import "./pokemon-api.css";
+@import "./poke-storage.css";
 
+/* GERAL */
 body {
   background: #ffd57b;
   box-sizing: border-box;
@@ -20,4 +22,9 @@ header p {
   font: 400 30px/1 "Sigmar One", serif;
   text-transform: uppercase;
   color: #fff;
+}
+.main-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
 }
