alteracao em alguns nomes de metodos, estilos e posicionamento do alterados e corrigidos para melhor funcionamento. responsivo concluido.

--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,10 @@ header p {
   grid-template-columns: 1fr 1fr;
   gap: 40px;
 }
+
+@media (max-width: 800px) {
+  .main-container {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+}
