--- a/css/poke-storage.css
+++ b/css/poke-storage.css
@@ -4,7 +4,12 @@
   grid-column: 2;
   grid-row: 1/6;
   gap: 10px;
-  justify-content: center;
+  justify-content: start;
+  min-height: 200px;
+  max-height: 600px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: fit-content;
   background: #fff;
   border: 5px solid #de5239;
   padding-top: 20px;
@@ -13,13 +18,40 @@
 }
 .poke-storage-container li {
   padding: 10px;
-  border-radius: 50%;
+
   width: 100px;
   height: 100px;
   background: #fcfcfc;
+  border: 2px solid #fcfcfc;
+}
+.poke-storage-container li img {
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.poke-storage-container li:hover img {
   border: 2px solid #de5239;
+  width: 105%;
 }
 
-.poke-storage-container li:hover img {
-  width: 105%;
+@media (max-width: 800px) {
+  .poke-storage-container {
+    padding-top: 0;
+    grid-column: 1;
+    flex-wrap: nowrap;
+    justify-self: center;
+    grid-row: 4;
+    margin-top: 0;
+    margin-right: 0;
+    min-height: initial;
+    max-height: initial;
+    width: 80vw;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    height: fit-content;
+  }
+
+  .poke-storage-container li:hover img {
+    width: initial;
+    height: 105%;
+  }
 }
