--- a/css/pokemon-api.css
+++ b/css/pokemon-api.css
@@ -188,7 +188,7 @@
     margin-bottom: 30px;
   }
   .btn-container {
-    gap: 100px;
-    justify-content: center;
+    gap: 20px;
+    justify-content: space-between;
   }
 }
